<resources>
    <string name="app_name">Store</string>
    <string name="name_store">Name of the store o_O </string>
    <string name="save">Save</string>
    <string name="description_store_add">Create new store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_name">Nombre de la tienda</string>
    <string name="helper_required">Requerido</string>
    <string name="hint_phone">Numero de telefono</string>
    <string name="hint_website">Pagina web</string>
    <string name="hint_photo_url">Foto</string>
    <string name="description_img_photo">Image  que muestra la tienda</string>
    <string name="hit_url_img">foto de la imagen</string>
    <string name="edit_store_add">Crear tienda</string>
    <string name="menu_save">Save</string>
    <string name="arg_id">key_id</string>
    <string name="edit_store">Editar tienda</string>
    <string name="dialog_delete_title">¿Elimirnar Tienda?</string>
    <string name="dialog_delete_confirm">Eliminar</string>
    <string name="option_item_call">Llamar</string>
    <string name="option_item_goToWeb">Ir al sitio web</string>
    <string name="dialog_delete_cancel">Cancelar</string>
    <string name="data_store">Data Store</string>
    <string name="main_error_get">Error when querying data</string>
    <string name="main_error_delete">Error when deleting data</string>
    <string name="main_error_insert">error when adding data</string>
    <string name="main_error_update">error when updating data</string>
    <string name="main_error_unknown">Error unknown</string>
    <string name="photo_the_store">Photo the store</string>
</resources>